<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".AccountActivity">

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:drawablePadding="@dimen/dp_26dp"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_close" />

    <RelativeLayout
        android:id="@+id/rlAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_12dp"
            android:paddingLeft="@dimen/dp_14dp"
            android:paddingRight="@dimen/dp_4dp"
            android:src="@drawable/ic_profile_user" />

        <TextView
            android:id="@+id/tvAcHolderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12dp"
            android:layout_toEndOf="@id/ivDP"
            android:paddingRight="@dimen/dp_6dp"
            android:text="@string/thomas_andrew"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20sp" />

        <ImageButton
            android:id="@+id/btnDownButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12dp"
            android:layout_toEndOf="@id/tvAcHolderName"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_down" />

        <TextView
            android:id="@+id/tvAcMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAcHolderName"
            android:layout_toEndOf="@id/ivDP"
            android:text="@string/andrew_t_gmail_com"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvManageAc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAcMail"
            android:layout_marginTop="@dimen/dp_10dp"
            android:layout_marginBottom="@dimen/dp_22dp"
            android:layout_toEndOf="@id/ivDP"
            android:text="@string/manage_your_google_account"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/sp_16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp_4dp"
        android:layout_marginRight="@dimen/dp_4dp"
        android:background="#393838" />

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_22dp"
        android:layout_marginBottom="@dimen/dp_10dp"
        android:drawableStart="@drawable/ic_history"
        android:drawablePadding="@dimen/dp_16dp"
        android:paddingLeft="@dimen/dp_28dp"
        android:paddingTop="@dimen/dp_6dp"
        android:paddingBottom="@dimen/dp_6dp"
        android:text="@string/history"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSwitchAc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10dp"
        android:drawableStart="@drawable/ic_switch_account"
        android:drawablePadding="@dimen/dp_16dp"
        android:paddingLeft="@dimen/dp_28dp"
        android:paddingTop="@dimen/dp_6dp"
        android:paddingBottom="@dimen/dp_6dp"
        android:text="@string/switch_account"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10dp"
        android:drawableStart="@drawable/ic_settings"
        android:drawablePadding="@dimen/dp_16dp"
        android:paddingLeft="@dimen/dp_28dp"
        android:paddingTop="@dimen/dp_6dp"
        android:paddingBottom="@dimen/dp_6dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHelpFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10dp"
        android:drawableStart="@drawable/ic_help"
        android:drawablePadding="@dimen/dp_16dp"
        android:paddingLeft="@dimen/dp_28dp"
        android:paddingTop="@dimen/dp_6dp"
        android:paddingBottom="@dimen/dp_6dp"
        android:text="@string/help_feedback"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvPrivacy"
            android:text="Privacy Policy  •  "
            android:textColor="#D0C8C8"
            android:textSize="@dimen/sp_15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvTerms"
            android:text="Terms of Service"
            android:textColor="#D0C8C8"
            android:textSize="@dimen/sp_15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvAdContent"
        android:textColor="#D0C8C8"
        android:textSize="@dimen/sp_18sp"
        android:paddingTop="@dimen/dp_14dp"
        android:paddingLeft="@dimen/dp_14dp"
        android:paddingRight="@dimen/dp_14dp"
        android:paddingBottom="@dimen/dp_10dp"
        android:layout_gravity="center"
        android:text="@string/enjoy_as_free_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnAcGetPremium"
        android:layout_margin="@dimen/dp_6dp"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20sp"
        android:background="@color/red"
        android:text="@string/get_music_premium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>